[tool.poetry]
name = "bot-mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot_mail"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
peewee-migrate = "^1.7.1"
peewee = "^3.16.1"
apscheduler = "^3.10.1"
sqlalchemy = "^2.0.9"
telethon = "^1.28.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
